--- a/src/support-widget/SupportWidgetApp.hbs
+++ b/src/support-widget/SupportWidgetApp.hbs
@@ -1,10 +1,8 @@
 ﻿<div class="support-widget-app">
     <header class="support-widget-app__header">
-        <p class="support-widget-app__eyebrow">FlintMail support</p>
         <h1 class="support-widget-app__title">Расскажите, чем мы можем помочь</h1>
         <p class="support-widget-app__subtitle">
-            Опишите тему и детали — мы свяжемся с ответом и поможем закрыть вопрос.
-        </p>
+            Все поля обязательные. Пожалуйста, заполните их внимательно.         </p>
     </header>
 
     <form class="support-widget-form" data-form>
@@ -12,9 +10,13 @@
         <div class="support-widget-form__field" data-slot="message"></div>
 
         <div class="support-widget-form__actions">
-            <div data-slot="submit"></div>
+            <div class="support-widget-form__actions-buttom">
+                <div data-slot="submit"></div>
+            </div>
+            <div class="support-widget-form__actions-buttom">
+                <div data-slot="appil"></div>
+            </div>
         </div>
-
         <p class="support-widget-form__status" data-status></p>
     </form>
 </div>
